--- a/components/styles.module.css
+++ b/components/styles.module.css
@@ -19,8 +19,6 @@
   line-height: 1.5;
   color: rgb(55, 53, 47);
   caret-color: rgb(55, 53, 47);
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica,
-    'Apple Color Emoji', Arial, sans-serif, 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
 .loadingIcon {
@@ -93,6 +91,14 @@
   color: #2795e9;
 }
 
+.rss:hover {
+  color: #f26522;
+}
+
+.zhihu:hover {
+  color: #0066ff;
+}
+
 .github:hover {
   color: #c9510c;
 }
@@ -105,19 +111,7 @@
   width: 100%;
   margin-top: 2em;
   border-top: 1px solid var(--fg-color-0);
-}
-
-.utterances {
-  margin-top: 2em;
-  width: 100%;
-}
-
-@media only screen and (min-width: 567px) {
-  .utterances {
-    width: calc(100% + 60px);
-    position: relative;
-    left: -60px;
-  }
+  padding: 1px;
 }
 
 @media only screen and (max-width: 566px) {
