--- a/components/PageSocial.module.css
+++ b/components/PageSocial.module.css
@@ -68,7 +68,7 @@
   fill: var(--bg-color);
 }
 
-:global(.dark) .action:hover svg {
+:global(.dark-mode) .action:hover svg {
   fill: var(--fg-color);
 }
 
