--- a/components/styles.module.css
+++ b/components/styles.module.css
@@ -19,6 +19,8 @@
   line-height: 1.5;
   color: rgb(55, 53, 47);
   caret-color: rgb(55, 53, 47);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica,
+    'Apple Color Emoji', Arial, sans-serif, 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
 .loadingIcon {
@@ -91,14 +93,6 @@
   color: #2795e9;
 }
 
-.rss:hover {
-  color: #f26522;
-}
-
-.zhihu:hover {
-  color: #0066ff;
-}
-
 .github:hover {
   color: #c9510c;
 }
@@ -111,7 +105,19 @@
   width: 100%;
   margin-top: 2em;
   border-top: 1px solid var(--fg-color-0);
-  padding: 1px;
+}
+
+.utterances {
+  margin-top: 2em;
+  width: 100%;
+}
+
+@media only screen and (min-width: 567px) {
+  .utterances {
+    width: calc(100% + 60px);
+    position: relative;
+    left: -60px;
+  }
 }
 
 @media only screen and (max-width: 566px) {
