--- a/styles/global.css
+++ b/styles/global.css
@@ -1,18 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-:root {
-  --base-font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-    'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-    'Droid Sans', 'Helvetica Neue', 'Noto Sans', sans-serif;
-  --title-font-family: noto sans, -apple-system, BlinkMacSystemFont, Segoe UI,
-    Helvetica, Arial, Source Han Sans SC, Noto Sans CJK SC, Sarasa Gothic SC,
-    Microsoft YaHei, sans-serif, Apple Color Emoji, Segoe UI Emoji;
-  --monospace-font-family: Fira Code, SF Mono, Consolas, Monaco, Ubuntu Mono,
-    monospace;
-}
-
 * {
   box-sizing: border-box;
 }
@@ -26,19 +11,16 @@ body,
 html {
   padding: 0;
   margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 body {
-  font-family: var(--base-font-family) !important;
   overflow-x: hidden;
 }
 
-.notion-title {
-  font-family: var(--title-font-family) !important;
-}
-
-code {
-  font-family: var(--monospace-font-family) !important;
+.utterances {
+  max-width: 100% !important;
 }
 
 .static-tweet blockquote {
@@ -49,65 +31,24 @@ code {
   margin-inline-end: 0;
 }
 
-.giscus, .giscus-frame {
-  width: 100%;
-}
-.giscus-frame {
-  padding-right: 1px;
-}
-
 .static-tweet-emoji {
   height: 1.2em !important;
   width: 1.2em !important;
 }
 
-
-.dark {
-  --fg-color: rgba(255, 255, 255, 0.9);
-  --fg-color-0: var(--fg-color);
-  --fg-color-1: var(--fg-color);
-  --fg-color-2: var(--fg-color);
-  --fg-color-3: var(--fg-color);
-  --fg-color-4: var(--fg-color);
-  --fg-color-5: rgba(255, 255, 255, 0.7);
-  --fg-color-6: #fff;
-  --fg-color-icon: #fff;
-
-  --bg-color: #2f3437;
-  --bg-color-0: rgb(71, 76, 80);
-  --bg-color-1: rgb(63, 68, 71);
-  --bg-color-2: rgba(135, 131, 120, 0.15);
-
-  --notion-red: rgb(255, 115, 105);
-  --notion-pink: rgb(226, 85, 161);
-  --notion-blue: rgb(82, 156, 202);
-  --notion-purple: rgb(154, 109, 215);
-  --notion-teal: rgb(77, 171, 154);
-  --notion-yellow: rgb(255, 220, 73);
-  --notion-orange: rgb(255, 163, 68);
-  --notion-brown: rgb(147, 114, 100);
-  --notion-gray: rgba(151, 154, 155, 0.95);
-  --notion-red_background: rgb(89, 65, 65);
-  --notion-pink_background: rgb(83, 59, 76);
-  --notion-blue_background: rgb(54, 73, 84);
-  --notion-purple_background: rgb(68, 63, 87);
-  --notion-teal_background: rgb(53, 76, 75);
-  --notion-yellow_background: rgb(89, 86, 59);
-  --notion-orange_background: rgb(89, 74, 58);
-  --notion-brown_background: rgb(67, 64, 64);
-  --notion-gray_background: rgb(69, 75, 78);
-  --notion-red_background_co: rgba(89, 65, 65, 0.3);
-  --notion-pink_background_co: rgba(83, 59, 76, 0.3);
-  --notion-blue_background_co: rgba(120, 162, 187, 0.3);
-  --notion-purple_background_co: rgba(68, 63, 87, 0.3);
-  --notion-teal_background_co: rgba(53, 76, 75, 0.3);
-  --notion-yellow_background_co: rgba(89, 86, 59, 0.3);
-  --notion-orange_background_co: rgba(89, 74, 58, 0.3);
-  --notion-brown_background_co: rgba(67, 64, 64, 0.3);
-  --notion-gray_background_co: rgba(69, 75, 78, 0.3);
+::-webkit-scrollbar
+{
+  width: 12px;
+  background-color: #F5F5F5;
+  background-color: var(--bg-color-1);
 }
 
-
-.dark .notion-bookmark {
-  border-color: var(--bg-color-0);
+::-webkit-scrollbar-thumb
+{
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: #555;
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: var(--fg-color-1);
 }
